--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         </section>
     </main>
     <footer>
-        <p>Un site créé par <a href="#">Ton équipe</a></p>
-        <p>© 2026 Linuxpedia – Tous droits réservés.</p>
+        <p>Un site créé par des gens qui te veulent du bien</p>
+        <p>2026 Linuxpedia – Tout est libre de droits.</p>
     </footer>
     <script src="script.js"></script>
 </body>
 </html>
+
