--- a/creation.html
+++ b/creation.html
@@ -51,9 +51,10 @@
         </form>
     </main>
     <footer>
-        <p>Un site créé par <a href="#">Ton équipe</a></p>
-        <p>© 2026 Linuxpedia – Tous droits réservés.</p>
+        <p>Un site créé par des gens qui te veulent du bien</p>
+        <p>2026 Linuxpedia – Tout est libre droits.</p>
     </footer>
     <script src="script.js"></script>
 </body>
 </html>
+
